--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,12 +15,55 @@ body {
   text-align: center;
 }
 
+.links {
+  display: flex;
+  width: 650px;
+  padding: 15px;
+  margin-left: auto;
+  margin-right: 0;
+}
+
 a {
   color: green;
   text-decoration: none;
-  font-weight: 400;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 li {
   list-style: none;
+  display: inline;
+  margin: 5px;
+}
+
+.container {
+  display: block;
+  width: auto;
+  height: 800px;
+  padding: 15px;
+  margin: 10px;
+}
+
+h3 {
+  color: green;
+  text-align: left;
+  font-size: 45px;
+}
+
+.content {
+  width: auto;
+  height: auto;
+}
+
+.image-container {
+  display: inline-block;
+  height: auto;
+  width: 650px;
+}
+
+.text {
+  display: inline-block;
+  width: 400px;
+  height: auto;
+  margin: 10px;
 }
